# nerdearla

./: README.md  pyproject.toml
expectations/: nerdearla.json
notebooks/: nerdearla_great_expectations_pandas.ipynb  nerdearla_resources_great_expectations_pandas_validation.ipynb
plugins/: custom_expectation.py
