[tool.poetry]
name = "nerdearla"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
great-expectations = "^0.13.39"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
